--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ $(function(){
 	<div class="logo">hyranno/portfolio</div>
 	<a href="products.html" target="con" radiogroup="menu">Products</a>
 	<a href="about.html" target="con" radiogroup="menu">About</a>
-	<a href="" target="_blank">GitHub</a>
+	<a href="http://jsdo.it/hyranno" target="_blank">jsdo.it</a>
+	<a href="https://github.com/hyranno" target="_blank">GitHub</a>
 </div>
 
 <iframe name="con" src="products.html"></iframe>
