detailed about, add mazegame

--- a/about.html
+++ b/about.html
@@ -27,11 +27,45 @@ $(function(){
 <div class="box">
 	<div class="genre">使うもの</div>
 	<div class="lang">JavaScript</div>
-	<div class="lang">HTML</div>
+	<div class="desc">
+		経験10年ほど。
+		arguments,instanceof,applyなどは時々使います。
+		jQueryをよく使います。
+		HTML,CSSも書きます。
+	</div>
+
 	<div class="lang">PHP</div>
-	<div class="lang">C++</div>
+	<div class="desc">
+		経験5年ほど。
+		Smartyの経験あります。
+		Twitter/FacebookでのOAuthログインも経験あります。
+	</div>
+
 	<div class="lang">Java</div>
-	<div class="lang">Octave</div>
+	<div class="desc">
+		経験5年ほど。
+		awt,アプレットの経験はあります。
+	</div>
+
+	<div class="lang">C++</div>
+	<div class="desc">
+		経験5年ほど。
+		STLは使います。
+		C++11は乱数とラムダ式のあたりは触ったことがあります。
+		OpenCVの経験あります。
+	</div>
+
+	<div class="lang">SQL</div>
+	<div class="desc">
+		PHP(PDO)から時々叩きます。
+	</div>
+
+	<div class="lang">Octave(Matlab)</div>
+	<div class="desc">
+		研究で利用しています。
+	</div>
+
+
 </div>
 
 <div class="box">
