--- a/products.html
+++ b/products.html
@@ -40,6 +40,17 @@ $(function(){
 </div>
 
 <div class="item">
+	<div class="name">パズルゲーム</div>
+	<div class="tech">JavaScript,HTML5</div>
+	<a class="link" href="http://games.jsdo.it/hyranno/maze" target="_blank">http://games.jsdo.it/hyranno/maze</a>
+	<div class="desc">
+		制作期間5日。パズルゲームです。まだステージが足りてないので分かり辛いかも知れません。
+		webAudioAPIで効果音を生成したりクリアデータをlocalStorageに保存したりしています。
+		キャラ画像はWolf RPG Editorのグラフィック合成器を使わせていただきました。
+	</div>
+</div>
+
+<div class="item">
 	<div class="name">はめ込み合成</div>
 	<div class="tech">JavaScript,HTML5</div>
 	<a class="link" href="http://jsdo.it/hyranno/hTga" target="_blank">http://jsdo.it/hyranno/hTga</a>
